fix: Remove white space

--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -14,16 +14,20 @@ $language-item-tint: darken($list-item-color, 30%);
 $framework-item-tint: darken($list-item-color, 35%);
 $tools-item-tint: darken($list-item-color, 40%);
 
+
 .AboutContainer {
+  width:auto;
   padding: 20px;
   background-color: $background-color;
 }
+
 
 .AboutContentContainer {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
 }
+
 
 .AboutContent {
   flex: 1;
